--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "color": "^5.0.0",
     "expo": "^52.0.16",
+    "expo-blur": "^14.0.3",
     "expo-constants": "~17.0.2",
+    "expo-haptics": "^14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.2",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
+    "expo-symbols": "^0.2.2",
+    "expo-web-browser": "^14.0.2",
+    "lucide-react-native": "^0.475.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
@@ -24,7 +30,9 @@
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.18",
+    "typescript": "^5.7.3"
   },
   "private": true
 }
