--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
+    "@tanstack/react-query": "^5.66.7",
     "color": "^5.0.0",
     "expo": "^52.0.16",
     "expo-blur": "^14.0.3",
@@ -23,11 +25,15 @@
     "lucide-react-native": "^0.475.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.6",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
