--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
